@@ -1,0 +1,8 @@
+<li>Added Steam review rating scores to users wishlists
+<li>Added OpenCritic.com reviews to store pages
+<li>Added a button to toggle live market updates for popular items on or off
+<li>Added a confirmation dialog when emptying your shopping cart
+<li>Add to Cart buttons will now display on larger wishlists
+<li>Added a "View badge progress" button to booster packs in inventory and on trading cards in market
+<li>Added an option for viewing user's wishlist data on their profile
+<li>Tons of bug fixes and performance tweaks, see News section in options for full details
